webapp/src/main/webapp/themes/wilma/css/wilma.css
/* ... */
#main-nav li a.selected {
    color: #002b44;
    background: url(../images/selected-main-nav.jpg) left -1px no-repeat;
    margin-left: 18px;
}

ul.dropdown li#user-menu a {
    margin-right: 0;
}

/* WRAPPER CONTENT------>  */
#wrapper-content {
    clear: both;
    /* width: 930px; */
    margin: 0 auto;
    background: #fff;
    /* padding-top: 20px; */
}

#wrapper-content > .row > .row-wrapper {
    min-height: 710px;
}
/* INTRO-BLURB ------>  */
#intro {
    float: left;
    /* width: 570px; */
    padding-bottom: 50px;
    margin-top: 20px;
}
body.loggedIn #intro {
    width: 100%;
}
#intro h2 {
    padding: 35px 0 12px 24px;
    border-bottom: none;
    color: #2485AE;
}
#intro p {
    font-size: 16px;
    color: #5f6464;
    line-height: 1.3em;
    padding: 0 24px 0 24px;
}
#intro a,
#individual-intro ul.individual-urls li a,
#revision-build-date h3,
#terms h3,
#visual-graph h5,
.blue,
p.forgot-password a,
ul#individual-personInPosition li a,
ul.individual-urls li a,
ul.individual-urls-people li a {
    color: #2485ae
}
/* LOG IN------>  */
#login {
    /* float: right; */
    /* width: 314px; */
    border: 1px solid #e8ece9;
    /* margin-right: 25px; */
    padding-bottom: 30px;
    margin-bottom: 30px;
    overflow: hidden;
    margin-top: 20px;
    padding: 15px;
}
body.login #login {
    float: none;
}
#login h2 {
    font-size: 22px;
    color: #2485ae;
    /* padding-left: 15px; */
    /* padding-top: 18px; */
    border-bottom: none;
}
h3.internal-auth:hover {
    color: #47B6D0;
}
#error-alert {
    margin-left: 0;
    margin-bottom: 12px;
    padding: 12px;
    padding-bottom: 12px;
    border: 1px dotted #a12424;
}
#error-alert img {
    float: left;
    margin: 0;
    padding: 0;
    vertical-align: middle;
}
#error-alert p {
    padding-left: 40px;
    font-size: .8em;
    line-height: 1.3em;
    color: #a12424;
    padding-top: 5px;
}

#login-form > div {
    padding: 38px;
}

#login-form label {
    display: block;
    color: #5e6363;
    padding-top: 0;
    /* padding-left: 38px; */
    font-size: 14px;
}

#login-form input.text-field {
    border: 0;
    font-size: 14px;
    padding: 5px;
    /* width: 219px; */
    width: 100%;
    height: 43px;
    /* margin-left: 38px; */
    background: #fff;
    border: 1px solid #e0dfdf;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}
#login-form input.text-field:focus {
    border: 1px solid rgba(57, 138, 172, .5);
    background-color: rgba(57, 138, 172, .1);
}
#login-form p.submit {
    width: 100%;
    height: 40px;
    margin-top: 20px;
    /* margin-left: 38px; */
}
#login-form p.submit-password {
    height: 40px;
    margin-top: 20px;
}
#login-form input.checkbox-remember-me {
    float: left;
    height: 14px;
    width: 14px;
    color: #5e6363;
    padding: 0;
    margin-top: 33px;
    margin-left: 20px;
}
#login-form label.label-remember-me {
    display: block;
    float: right;
    color: #5e6363;
    font-size: 12px;
    width: 100px;
    margin: 0;
    padding: 0;
    margin-top: 29px;
    margin-right: 32px;
}
p.forgot-password {
    clear: both;
    margin-left: 38px;
    font-size: 12px;
    padding-top: 1.2em;
    padding-bottom: 1.2em;
}
p.request-account {
    width: 219px;
    clear: both;
    float: left;
    margin-left: 38px;
    margin-top: 10px;
    padding-top: 20px;
    border-top: 1px solid #e8ece9;
}
p.password-note {
    font-size: 12px;
    color: #949696;
    padding-left: 38px;
}
#flash-message {
    border: 1px dotted #E2C822;
    background-color: #FFF9D7;
    padding: .5em;
    margin-bottom: 10px;
}
#welcome-message {
    border: 1px dotted #E2C822;
    background-color: #FFF9D7;
    padding: .25em;
    margin-bottom: 8px;
}
/* #flash-msg-container,
#welcome-msg-container {
    margin-bottom: 8px;
    margin-top: -10px;
    margin-right:-10px;
    height:34px;
} */
p.external-auth {
    margin: 0 auto;
}
p.external-auth a.blue,
p.external-auth a.blue:visited {
     background-color: #398AAC;
     width: 180px;
     margin-bottom: 17px;
     line-height: 1.3em;
     padding-top: 10px;
}
p.external-auth a.blue:hover {
    background-color: #58A2C1;
    color: #fff;
}
/* HOME SEARCH ------>  */
#search-home {
    float: left;
    /* width: 533px; */
    width: 100%;
    max-width: 533px;
    margin: 30px 0 0 0;
    /* margin-right: 24px; */
}
#search-home h3 {
    padding: 0;
    font-size: 22px;
    margin-bottom: 15px;
    color: #2485AE;
		padding-left: 24px;
}
#search-home-field {
    /* width: 483px; */
    width: 100%;
    height: 44px;
    background: url(../images/search-field-and-button.gif) 0 0 no-repeat;
    background-position-x: right;
}
#search-home-field input.search {
    text-decoration: none;
    background-color: transparent;
    color: #fff;
    font-size: 18px;
    border: none;
    padding: 11px 22px;
    cursor: pointer;
}
input.search-home-vivo {
    float: left;
    margin: 10px 0 0 8px;
    max-width: 350px;
    height: 20px;
    border: 0;
    font-size: 18px;
    color: #5e6363;
    margin-left: 4px;
    margin-top: 2px;
}

/* SEARCH HOME------>  */


a.filter-search {
	right: 102px;
}
input.search-homepage {
    border: 0;
    background-color: #f9fafa;
    background-position: right;
    opacity: .5;
    text-align:right;
    width: calc(100% - 142px);
    margin: 0 40px 0 0;
    height: 100%;
}

.filter-default {
		background: url(../images/filteredSearch.gif) 0 0 no-repeat;
}
.filter-active {
		background: url(../images/filteredSearchActive.gif) 0 0 no-repeat;
}
#filter-search-nav {
		background-color: #2d3535;
		color: #fff;
		background-color: #2d3535;
		color: #fff;
		right: 109px;
}
#filter-search-nav li {
		background-image: none;
		padding-left: 0;
		margin-left: 0;
}
#filter-search-nav a.active,
#stats p,
p.request-account a,
ul#header-nav a {
   color: #fff;
}
#filter-search-nav a {
		border-bottom: 1px dotted #4f5656;
		color: #1483A4;
}
/* ... */

